// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manager/npm/extract/index .extractPackageFile() catches invalid names 1`] = `
Object {
  "constraints": Object {},
  "deps": Array [
    Object {
      "depName": "kgabis/parson",
      "depType": "dependencies",
      "prettyDepType": "dependency",
      "skipReason": "invalid-name",
    },
  ],
  "lernaClient": undefined,
  "lernaPackages": undefined,
  "managerData": Object {
    "lernaJsonFile": undefined,
  },
  "npmLock": undefined,
  "npmrc": undefined,
  "packageFileVersion": undefined,
  "packageJsonName": undefined,
  "packageJsonType": "app",
  "pnpmShrinkwrap": undefined,
  "skipInstalls": true,
  "yarnLock": undefined,
  "yarnWorkspacesPackages": undefined,
  "yarnrc": undefined,
}
`;

exports[`manager/npm/extract/index .extractPackageFile() extracts engines 1`] = `
Object {
  "constraints": Object {
    "node": ">= 8.9.2",
    "npm": "^8.0.0",
    "pnpm": "^1.2.0",
    "vscode": ">=1.49.3",
    "yarn": "disabled",
  },
  "deps": Array [
    Object {
      "currentValue": "1.6.0",
      "datasource": "npm",
      "depName": "angular",
      "depType": "dependencies",
      "prettyDepType": "dependency",
    },
    Object {
      "currentValue": "1.6.0",
      "datasource": "npm",
      "depName": "@angular/cli",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
    },
    Object {
      "currentValue": "*",
      "datasource": "npm",
      "depName": "foo",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
      "skipReason": "any-version",
    },
    Object {
      "currentValue": "file:../foo/bar",
      "depName": "bar",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
      "skipReason": "file",
    },
    Object {
      "currentValue": "",
      "datasource": "npm",
      "depName": "baz",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
      "skipReason": "empty",
    },
    Object {
      "currentValue": "latest",
      "depName": "other",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
      "skipReason": "unknown-version",
    },
    Object {
      "currentValue": ">=1.7.0 <2.0.0",
      "depName": "atom",
      "depType": "engines",
      "prettyDepType": "engine",
      "skipReason": "unknown-engines",
    },
    Object {
      "commitMessageTopic": "Node.js",
      "currentValue": ">= 8.9.2",
      "datasource": "github-tags",
      "depName": "node",
      "depType": "engines",
      "lookupName": "nodejs/node",
      "prettyDepType": "engine",
      "versioning": "node",
    },
    Object {
      "commitMessageTopic": "npm",
      "currentValue": "^8.0.0",
      "datasource": "npm",
      "depName": "npm",
      "depType": "engines",
      "prettyDepType": "engine",
    },
    Object {
      "commitMessageTopic": "pnpm",
      "currentValue": "^1.2.0",
      "datasource": "npm",
      "depName": "pnpm",
      "depType": "engines",
      "prettyDepType": "engine",
    },
    Object {
      "commitMessageTopic": "Yarn",
      "currentValue": "disabled",
      "datasource": "npm",
      "depName": "yarn",
      "depType": "engines",
      "prettyDepType": "engine",
      "skipReason": "unknown-version",
    },
    Object {
      "currentValue": ">=1.49.3",
      "datasource": "github-tags",
      "depName": "vscode",
      "depType": "engines",
      "lookupName": "microsoft/vscode",
      "prettyDepType": "engine",
    },
  ],
  "lernaClient": undefined,
  "lernaPackages": undefined,
  "managerData": Object {
    "lernaJsonFile": undefined,
  },
  "npmLock": undefined,
  "npmrc": undefined,
  "packageFileVersion": undefined,
  "packageJsonName": undefined,
  "packageJsonType": "library",
  "pnpmShrinkwrap": undefined,
  "skipInstalls": false,
  "yarnLock": undefined,
  "yarnWorkspacesPackages": undefined,
  "yarnrc": undefined,
}
`;

exports[`manager/npm/extract/index .extractPackageFile() extracts non-npmjs 1`] = `
Object {
  "constraints": Object {},
  "deps": Array [
    Object {
      "currentValue": "github:owner/a",
      "depName": "a",
      "depType": "dependencies",
      "prettyDepType": "dependency",
      "skipReason": "unknown-version",
    },
    Object {
      "currentValue": "github:owner/b#master",
      "depName": "b",
      "depType": "dependencies",
      "prettyDepType": "dependency",
      "skipReason": "unversioned-reference",
    },
    Object {
      "currentRawValue": "github:owner/c#v1.1.0",
      "currentValue": "v1.1.0",
      "datasource": "github-tags",
      "depName": "c",
      "depType": "dependencies",
      "gitRef": true,
      "githubRepo": "owner/c",
      "lookupName": "owner/c",
      "pinDigests": false,
      "prettyDepType": "dependency",
      "sourceUrl": "https://github.com/owner/c",
    },
    Object {
      "currentValue": "github:owner/d#a7g3eaf",
      "depName": "d",
      "depType": "dependencies",
      "prettyDepType": "dependency",
      "skipReason": "unversioned-reference",
    },
    Object {
      "currentDigest": "49b5aca613b33c5b626ae68c03a385f25c142f55",
      "currentRawValue": "github:owner/e#49b5aca613b33c5b626ae68c03a385f25c142f55",
      "currentValue": null,
      "datasource": "github-tags",
      "depName": "e",
      "depType": "dependencies",
      "gitRef": true,
      "githubRepo": "owner/e",
      "lookupName": "owner/e",
      "prettyDepType": "dependency",
      "sourceUrl": "https://github.com/owner/e",
    },
    Object {
      "currentRawValue": "owner/f#v2.0.0",
      "currentValue": "v2.0.0",
      "datasource": "github-tags",
      "depName": "f",
      "depType": "dependencies",
      "gitRef": true,
      "githubRepo": "owner/f",
      "lookupName": "owner/f",
      "pinDigests": false,
      "prettyDepType": "dependency",
      "sourceUrl": "https://github.com/owner/f",
    },
    Object {
      "currentValue": "gitlab:owner/g#v1.0.0",
      "depName": "g",
      "depType": "dependencies",
      "prettyDepType": "dependency",
      "skipReason": "unknown-version",
    },
    Object {
      "currentValue": "github:-hello/world#v1.0.0",
      "depName": "h",
      "depType": "dependencies",
      "prettyDepType": "dependency",
      "skipReason": "unknown-version",
    },
    Object {
      "currentValue": "@foo/bar#v2.0.0",
      "depName": "i",
      "depType": "dependencies",
      "prettyDepType": "dependency",
      "skipReason": "unknown-version",
    },
    Object {
      "currentValue": "github:frank#v0.0.1",
      "depName": "j",
      "depType": "dependencies",
      "prettyDepType": "dependency",
      "skipReason": "unknown-version",
    },
    Object {
      "currentDigest": "49b5aca",
      "currentRawValue": "github:owner/k#49b5aca",
      "currentValue": null,
      "datasource": "github-tags",
      "depName": "k",
      "depType": "dependencies",
      "gitRef": true,
      "githubRepo": "owner/k",
      "lookupName": "owner/k",
      "prettyDepType": "dependency",
      "sourceUrl": "https://github.com/owner/k",
    },
    Object {
      "currentDigest": "abcdef0",
      "currentRawValue": "github:owner/l.git#abcdef0",
      "currentValue": null,
      "datasource": "github-tags",
      "depName": "l",
      "depType": "dependencies",
      "gitRef": true,
      "githubRepo": "owner/l",
      "lookupName": "owner/l",
      "prettyDepType": "dependency",
      "sourceUrl": "https://github.com/owner/l",
    },
    Object {
      "currentRawValue": "https://github.com/owner/m.git#v1.0.0",
      "currentValue": "v1.0.0",
      "datasource": "github-tags",
      "depName": "m",
      "depType": "dependencies",
      "gitRef": true,
      "githubRepo": "owner/m",
      "lookupName": "owner/m",
      "pinDigests": false,
      "prettyDepType": "dependency",
      "sourceUrl": "https://github.com/owner/m",
    },
    Object {
      "currentRawValue": "git+https://github.com/owner/n#v2.0.0",
      "currentValue": "v2.0.0",
      "datasource": "github-tags",
      "depName": "n",
      "depType": "dependencies",
      "gitRef": true,
      "githubRepo": "owner/n",
      "lookupName": "owner/n",
      "pinDigests": false,
      "prettyDepType": "dependency",
      "sourceUrl": "https://github.com/owner/n",
    },
  ],
  "lernaClient": undefined,
  "lernaPackages": undefined,
  "managerData": Object {
    "lernaJsonFile": undefined,
  },
  "npmLock": undefined,
  "npmrc": undefined,
  "packageFileVersion": undefined,
  "packageJsonName": undefined,
  "packageJsonType": "app",
  "pnpmShrinkwrap": undefined,
  "skipInstalls": true,
  "yarnLock": undefined,
  "yarnWorkspacesPackages": undefined,
  "yarnrc": undefined,
}
`;

exports[`manager/npm/extract/index .extractPackageFile() extracts npm package alias 1`] = `
Object {
  "constraints": Object {},
  "deps": Array [
    Object {
      "currentValue": "1",
      "datasource": "npm",
      "depName": "a",
      "depType": "dependencies",
      "lookupName": "foo",
      "npmPackageAlias": true,
      "prettyDepType": "dependency",
    },
    Object {
      "currentValue": "1.2.3",
      "datasource": "npm",
      "depName": "b",
      "depType": "dependencies",
      "lookupName": "@foo/bar",
      "npmPackageAlias": true,
      "prettyDepType": "dependency",
    },
    Object {
      "currentValue": "npm:foo",
      "depName": "c",
      "depType": "dependencies",
      "npmPackageAlias": true,
      "prettyDepType": "dependency",
      "skipReason": "unknown-version",
    },
  ],
  "lernaClient": undefined,
  "lernaPackages": undefined,
  "managerData": Object {
    "lernaJsonFile": undefined,
  },
  "npmLock": undefined,
  "npmrc": undefined,
  "packageFileVersion": undefined,
  "packageJsonName": undefined,
  "packageJsonType": "app",
  "pnpmShrinkwrap": undefined,
  "skipInstalls": false,
  "yarnLock": undefined,
  "yarnWorkspacesPackages": undefined,
  "yarnrc": undefined,
}
`;

exports[`manager/npm/extract/index .extractPackageFile() extracts volta 1`] = `
Object {
  "constraints": Object {
    "node": "8.9.2",
  },
  "deps": Array [
    Object {
      "commitMessageTopic": "Node.js",
      "currentValue": "8.9.2",
      "datasource": "github-tags",
      "depName": "node",
      "depType": "engines",
      "lookupName": "nodejs/node",
      "prettyDepType": "engine",
      "versioning": "node",
    },
    Object {
      "commitMessageTopic": "Node.js",
      "currentValue": "8.9.2",
      "datasource": "github-tags",
      "depName": "node",
      "depType": "volta",
      "lookupName": "nodejs/node",
      "prettyDepType": "volta",
      "versioning": "node",
    },
    Object {
      "commitMessageTopic": "Yarn",
      "currentValue": "1.12.3",
      "datasource": "npm",
      "depName": "yarn",
      "depType": "volta",
      "prettyDepType": "volta",
    },
    Object {
      "currentValue": "5.9.0",
      "depName": "npm",
      "depType": "volta",
      "prettyDepType": "volta",
      "skipReason": "unknown-volta",
    },
  ],
  "lernaClient": undefined,
  "lernaPackages": undefined,
  "managerData": Object {
    "lernaJsonFile": undefined,
  },
  "npmLock": undefined,
  "npmrc": undefined,
  "packageFileVersion": undefined,
  "packageJsonName": undefined,
  "packageJsonType": "library",
  "pnpmShrinkwrap": undefined,
  "skipInstalls": true,
  "yarnLock": undefined,
  "yarnWorkspacesPackages": undefined,
  "yarnrc": undefined,
}
`;

exports[`manager/npm/extract/index .extractPackageFile() extracts volta yarn unknown-version 1`] = `
Object {
  "constraints": Object {
    "node": "8.9.2",
  },
  "deps": Array [
    Object {
      "commitMessageTopic": "Node.js",
      "currentValue": "8.9.2",
      "datasource": "github-tags",
      "depName": "node",
      "depType": "engines",
      "lookupName": "nodejs/node",
      "prettyDepType": "engine",
      "versioning": "node",
    },
    Object {
      "commitMessageTopic": "Node.js",
      "currentValue": "8.9.2",
      "datasource": "github-tags",
      "depName": "node",
      "depType": "volta",
      "lookupName": "nodejs/node",
      "prettyDepType": "volta",
      "versioning": "node",
    },
    Object {
      "commitMessageTopic": "Yarn",
      "currentValue": "unknown",
      "datasource": "npm",
      "depName": "yarn",
      "depType": "volta",
      "prettyDepType": "volta",
      "skipReason": "unknown-version",
    },
  ],
  "lernaClient": undefined,
  "lernaPackages": undefined,
  "managerData": Object {
    "lernaJsonFile": undefined,
  },
  "npmLock": undefined,
  "npmrc": undefined,
  "packageFileVersion": undefined,
  "packageJsonName": undefined,
  "packageJsonType": "library",
  "pnpmShrinkwrap": undefined,
  "skipInstalls": true,
  "yarnLock": undefined,
  "yarnWorkspacesPackages": undefined,
  "yarnrc": undefined,
}
`;

exports[`manager/npm/extract/index .extractPackageFile() finds "npmClient":"npm" in lerna.json 1`] = `
Object {
  "constraints": Object {},
  "deps": Array [
    Object {
      "currentValue": "6.5.0",
      "datasource": "npm",
      "depName": "autoprefixer",
      "depType": "dependencies",
      "prettyDepType": "dependency",
    },
    Object {
      "currentValue": "~1.6.0",
      "datasource": "npm",
      "depName": "bower",
      "depType": "dependencies",
      "prettyDepType": "dependency",
    },
    Object {
      "currentValue": "13.1.0",
      "datasource": "npm",
      "depName": "browserify",
      "depType": "dependencies",
      "prettyDepType": "dependency",
    },
    Object {
      "currentValue": "0.9.2",
      "datasource": "npm",
      "depName": "browserify-css",
      "depType": "dependencies",
      "prettyDepType": "dependency",
    },
    Object {
      "currentValue": "=0.22.0",
      "datasource": "npm",
      "depName": "cheerio",
      "depType": "dependencies",
      "prettyDepType": "dependency",
    },
    Object {
      "currentValue": "1.21.0",
      "datasource": "npm",
      "depName": "config",
      "depType": "dependencies",
      "prettyDepType": "dependency",
    },
    Object {
      "depName": "enabled",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
      "skipReason": "invalid-value",
    },
    Object {
      "currentValue": "^1.5.8",
      "datasource": "npm",
      "depName": "angular",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
    },
    Object {
      "currentValue": "1.5.8",
      "datasource": "npm",
      "depName": "angular-touch",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
    },
    Object {
      "currentValue": "1.5.8",
      "datasource": "npm",
      "depName": "angular-sanitize",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
    },
    Object {
      "currentValue": "4.0.0-beta.1",
      "datasource": "npm",
      "depName": "@angular/core",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
    },
    Object {
      "currentValue": "1.21.0",
      "datasource": "npm",
      "depName": "config",
      "depType": "resolutions",
      "prettyDepType": "resolutions",
    },
    Object {
      "currentValue": "8.0.0",
      "datasource": "npm",
      "depName": "@angular/cli",
      "depType": "resolutions",
      "managerData": Object {
        "key": "**/@angular/cli",
      },
      "prettyDepType": "resolutions",
    },
    Object {
      "currentValue": "1.33.0",
      "datasource": "npm",
      "depName": "angular",
      "depType": "resolutions",
      "managerData": Object {
        "key": "**/angular",
      },
      "prettyDepType": "resolutions",
    },
    Object {
      "currentValue": "1.0.0",
      "datasource": "npm",
      "depName": "glob",
      "depType": "resolutions",
      "managerData": Object {
        "key": "config/glob",
      },
      "prettyDepType": "resolutions",
    },
  ],
  "lernaClient": "npm",
  "lernaPackages": undefined,
  "managerData": Object {
    "lernaJsonFile": "lerna.json",
  },
  "npmLock": undefined,
  "npmrc": undefined,
  "packageFileVersion": "1.0.0",
  "packageJsonName": "renovate",
  "packageJsonType": "app",
  "pnpmShrinkwrap": undefined,
  "skipInstalls": true,
  "yarnLock": undefined,
  "yarnWorkspacesPackages": undefined,
  "yarnrc": undefined,
}
`;

exports[`manager/npm/extract/index .extractPackageFile() finds "npmClient":"yarn" in lerna.json 1`] = `
Object {
  "constraints": Object {},
  "deps": Array [
    Object {
      "currentValue": "6.5.0",
      "datasource": "npm",
      "depName": "autoprefixer",
      "depType": "dependencies",
      "prettyDepType": "dependency",
    },
    Object {
      "currentValue": "~1.6.0",
      "datasource": "npm",
      "depName": "bower",
      "depType": "dependencies",
      "prettyDepType": "dependency",
    },
    Object {
      "currentValue": "13.1.0",
      "datasource": "npm",
      "depName": "browserify",
      "depType": "dependencies",
      "prettyDepType": "dependency",
    },
    Object {
      "currentValue": "0.9.2",
      "datasource": "npm",
      "depName": "browserify-css",
      "depType": "dependencies",
      "prettyDepType": "dependency",
    },
    Object {
      "currentValue": "=0.22.0",
      "datasource": "npm",
      "depName": "cheerio",
      "depType": "dependencies",
      "prettyDepType": "dependency",
    },
    Object {
      "currentValue": "1.21.0",
      "datasource": "npm",
      "depName": "config",
      "depType": "dependencies",
      "prettyDepType": "dependency",
    },
    Object {
      "depName": "enabled",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
      "skipReason": "invalid-value",
    },
    Object {
      "currentValue": "^1.5.8",
      "datasource": "npm",
      "depName": "angular",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
    },
    Object {
      "currentValue": "1.5.8",
      "datasource": "npm",
      "depName": "angular-touch",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
    },
    Object {
      "currentValue": "1.5.8",
      "datasource": "npm",
      "depName": "angular-sanitize",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
    },
    Object {
      "currentValue": "4.0.0-beta.1",
      "datasource": "npm",
      "depName": "@angular/core",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
    },
    Object {
      "currentValue": "1.21.0",
      "datasource": "npm",
      "depName": "config",
      "depType": "resolutions",
      "prettyDepType": "resolutions",
    },
    Object {
      "currentValue": "8.0.0",
      "datasource": "npm",
      "depName": "@angular/cli",
      "depType": "resolutions",
      "managerData": Object {
        "key": "**/@angular/cli",
      },
      "prettyDepType": "resolutions",
    },
    Object {
      "currentValue": "1.33.0",
      "datasource": "npm",
      "depName": "angular",
      "depType": "resolutions",
      "managerData": Object {
        "key": "**/angular",
      },
      "prettyDepType": "resolutions",
    },
    Object {
      "currentValue": "1.0.0",
      "datasource": "npm",
      "depName": "glob",
      "depType": "resolutions",
      "managerData": Object {
        "key": "config/glob",
      },
      "prettyDepType": "resolutions",
    },
  ],
  "lernaClient": "yarn",
  "lernaPackages": undefined,
  "managerData": Object {
    "lernaJsonFile": "lerna.json",
  },
  "npmLock": undefined,
  "npmrc": undefined,
  "packageFileVersion": "1.0.0",
  "packageJsonName": "renovate",
  "packageJsonType": "app",
  "pnpmShrinkwrap": undefined,
  "skipInstalls": true,
  "yarnLock": undefined,
  "yarnWorkspacesPackages": undefined,
  "yarnrc": undefined,
}
`;

exports[`manager/npm/extract/index .extractPackageFile() finds a lock file 1`] = `
Object {
  "constraints": Object {},
  "deps": Array [
    Object {
      "currentValue": "6.5.0",
      "datasource": "npm",
      "depName": "autoprefixer",
      "depType": "dependencies",
      "prettyDepType": "dependency",
    },
    Object {
      "currentValue": "~1.6.0",
      "datasource": "npm",
      "depName": "bower",
      "depType": "dependencies",
      "prettyDepType": "dependency",
    },
    Object {
      "currentValue": "13.1.0",
      "datasource": "npm",
      "depName": "browserify",
      "depType": "dependencies",
      "prettyDepType": "dependency",
    },
    Object {
      "currentValue": "0.9.2",
      "datasource": "npm",
      "depName": "browserify-css",
      "depType": "dependencies",
      "prettyDepType": "dependency",
    },
    Object {
      "currentValue": "=0.22.0",
      "datasource": "npm",
      "depName": "cheerio",
      "depType": "dependencies",
      "prettyDepType": "dependency",
    },
    Object {
      "currentValue": "1.21.0",
      "datasource": "npm",
      "depName": "config",
      "depType": "dependencies",
      "prettyDepType": "dependency",
    },
    Object {
      "depName": "enabled",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
      "skipReason": "invalid-value",
    },
    Object {
      "currentValue": "^1.5.8",
      "datasource": "npm",
      "depName": "angular",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
    },
    Object {
      "currentValue": "1.5.8",
      "datasource": "npm",
      "depName": "angular-touch",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
    },
    Object {
      "currentValue": "1.5.8",
      "datasource": "npm",
      "depName": "angular-sanitize",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
    },
    Object {
      "currentValue": "4.0.0-beta.1",
      "datasource": "npm",
      "depName": "@angular/core",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
    },
    Object {
      "currentValue": "1.21.0",
      "datasource": "npm",
      "depName": "config",
      "depType": "resolutions",
      "prettyDepType": "resolutions",
    },
    Object {
      "currentValue": "8.0.0",
      "datasource": "npm",
      "depName": "@angular/cli",
      "depType": "resolutions",
      "managerData": Object {
        "key": "**/@angular/cli",
      },
      "prettyDepType": "resolutions",
    },
    Object {
      "currentValue": "1.33.0",
      "datasource": "npm",
      "depName": "angular",
      "depType": "resolutions",
      "managerData": Object {
        "key": "**/angular",
      },
      "prettyDepType": "resolutions",
    },
    Object {
      "currentValue": "1.0.0",
      "datasource": "npm",
      "depName": "glob",
      "depType": "resolutions",
      "managerData": Object {
        "key": "config/glob",
      },
      "prettyDepType": "resolutions",
    },
  ],
  "lernaClient": undefined,
  "lernaPackages": undefined,
  "managerData": Object {
    "lernaJsonFile": undefined,
  },
  "npmLock": undefined,
  "npmrc": undefined,
  "packageFileVersion": "1.0.0",
  "packageJsonName": "renovate",
  "packageJsonType": "app",
  "pnpmShrinkwrap": undefined,
  "skipInstalls": true,
  "yarnLock": "yarn.lock",
  "yarnWorkspacesPackages": undefined,
  "yarnrc": undefined,
}
`;

exports[`manager/npm/extract/index .extractPackageFile() finds complex yarn workspaces 1`] = `
Object {
  "constraints": Object {},
  "deps": Array [],
  "lernaClient": "npm",
  "lernaPackages": undefined,
  "managerData": Object {
    "lernaJsonFile": "lerna.json",
  },
  "npmLock": undefined,
  "npmrc": undefined,
  "packageFileVersion": "0.0.8",
  "packageJsonName": "@a/b",
  "packageJsonType": "app",
  "pnpmShrinkwrap": undefined,
  "skipInstalls": true,
  "yarnLock": undefined,
  "yarnWorkspacesPackages": Array [
    "packages/*",
  ],
  "yarnrc": undefined,
}
`;

exports[`manager/npm/extract/index .extractPackageFile() finds lerna 1`] = `
Object {
  "constraints": Object {},
  "deps": Array [
    Object {
      "currentValue": "6.5.0",
      "datasource": "npm",
      "depName": "autoprefixer",
      "depType": "dependencies",
      "prettyDepType": "dependency",
    },
    Object {
      "currentValue": "~1.6.0",
      "datasource": "npm",
      "depName": "bower",
      "depType": "dependencies",
      "prettyDepType": "dependency",
    },
    Object {
      "currentValue": "13.1.0",
      "datasource": "npm",
      "depName": "browserify",
      "depType": "dependencies",
      "prettyDepType": "dependency",
    },
    Object {
      "currentValue": "0.9.2",
      "datasource": "npm",
      "depName": "browserify-css",
      "depType": "dependencies",
      "prettyDepType": "dependency",
    },
    Object {
      "currentValue": "=0.22.0",
      "datasource": "npm",
      "depName": "cheerio",
      "depType": "dependencies",
      "prettyDepType": "dependency",
    },
    Object {
      "currentValue": "1.21.0",
      "datasource": "npm",
      "depName": "config",
      "depType": "dependencies",
      "prettyDepType": "dependency",
    },
    Object {
      "depName": "enabled",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
      "skipReason": "invalid-value",
    },
    Object {
      "currentValue": "^1.5.8",
      "datasource": "npm",
      "depName": "angular",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
    },
    Object {
      "currentValue": "1.5.8",
      "datasource": "npm",
      "depName": "angular-touch",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
    },
    Object {
      "currentValue": "1.5.8",
      "datasource": "npm",
      "depName": "angular-sanitize",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
    },
    Object {
      "currentValue": "4.0.0-beta.1",
      "datasource": "npm",
      "depName": "@angular/core",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
    },
    Object {
      "currentValue": "1.21.0",
      "datasource": "npm",
      "depName": "config",
      "depType": "resolutions",
      "prettyDepType": "resolutions",
    },
    Object {
      "currentValue": "8.0.0",
      "datasource": "npm",
      "depName": "@angular/cli",
      "depType": "resolutions",
      "managerData": Object {
        "key": "**/@angular/cli",
      },
      "prettyDepType": "resolutions",
    },
    Object {
      "currentValue": "1.33.0",
      "datasource": "npm",
      "depName": "angular",
      "depType": "resolutions",
      "managerData": Object {
        "key": "**/angular",
      },
      "prettyDepType": "resolutions",
    },
    Object {
      "currentValue": "1.0.0",
      "datasource": "npm",
      "depName": "glob",
      "depType": "resolutions",
      "managerData": Object {
        "key": "config/glob",
      },
      "prettyDepType": "resolutions",
    },
  ],
  "lernaClient": "npm",
  "lernaPackages": undefined,
  "managerData": Object {
    "lernaJsonFile": "lerna.json",
  },
  "npmLock": undefined,
  "npmrc": undefined,
  "packageFileVersion": "1.0.0",
  "packageJsonName": "renovate",
  "packageJsonType": "app",
  "pnpmShrinkwrap": undefined,
  "skipInstalls": true,
  "yarnLock": undefined,
  "yarnWorkspacesPackages": undefined,
  "yarnrc": undefined,
}
`;

exports[`manager/npm/extract/index .extractPackageFile() finds simple yarn workspaces 1`] = `
Object {
  "constraints": Object {},
  "deps": Array [],
  "lernaClient": "npm",
  "lernaPackages": undefined,
  "managerData": Object {
    "lernaJsonFile": "lerna.json",
  },
  "npmLock": undefined,
  "npmrc": undefined,
  "packageFileVersion": "0.0.8",
  "packageJsonName": "@a/b",
  "packageJsonType": "app",
  "pnpmShrinkwrap": undefined,
  "skipInstalls": true,
  "yarnLock": undefined,
  "yarnWorkspacesPackages": Array [
    "packages/*",
  ],
  "yarnrc": undefined,
}
`;

exports[`manager/npm/extract/index .extractPackageFile() finds simple yarn workspaces with lerna.json and useWorkspaces: true 1`] = `
Object {
  "constraints": Object {},
  "deps": Array [],
  "lernaClient": undefined,
  "lernaPackages": undefined,
  "managerData": Object {
    "lernaJsonFile": undefined,
  },
  "npmLock": undefined,
  "npmrc": undefined,
  "packageFileVersion": "0.0.8",
  "packageJsonName": "@a/b",
  "packageJsonType": "app",
  "pnpmShrinkwrap": undefined,
  "skipInstalls": true,
  "yarnLock": undefined,
  "yarnWorkspacesPackages": Array [
    "packages/*",
  ],
  "yarnrc": undefined,
}
`;

exports[`manager/npm/extract/index .extractPackageFile() returns an array of dependencies 1`] = `
Object {
  "constraints": Object {},
  "deps": Array [
    Object {
      "currentValue": "6.5.0",
      "datasource": "npm",
      "depName": "autoprefixer",
      "depType": "dependencies",
      "prettyDepType": "dependency",
    },
    Object {
      "currentValue": "~1.6.0",
      "datasource": "npm",
      "depName": "bower",
      "depType": "dependencies",
      "prettyDepType": "dependency",
    },
    Object {
      "currentValue": "13.1.0",
      "datasource": "npm",
      "depName": "browserify",
      "depType": "dependencies",
      "prettyDepType": "dependency",
    },
    Object {
      "currentValue": "0.9.2",
      "datasource": "npm",
      "depName": "browserify-css",
      "depType": "dependencies",
      "prettyDepType": "dependency",
    },
    Object {
      "currentValue": "=0.22.0",
      "datasource": "npm",
      "depName": "cheerio",
      "depType": "dependencies",
      "prettyDepType": "dependency",
    },
    Object {
      "currentValue": "1.21.0",
      "datasource": "npm",
      "depName": "config",
      "depType": "dependencies",
      "prettyDepType": "dependency",
    },
    Object {
      "depName": "enabled",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
      "skipReason": "invalid-value",
    },
    Object {
      "currentValue": "^1.5.8",
      "datasource": "npm",
      "depName": "angular",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
    },
    Object {
      "currentValue": "1.5.8",
      "datasource": "npm",
      "depName": "angular-touch",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
    },
    Object {
      "currentValue": "1.5.8",
      "datasource": "npm",
      "depName": "angular-sanitize",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
    },
    Object {
      "currentValue": "4.0.0-beta.1",
      "datasource": "npm",
      "depName": "@angular/core",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
    },
    Object {
      "currentValue": "1.21.0",
      "datasource": "npm",
      "depName": "config",
      "depType": "resolutions",
      "prettyDepType": "resolutions",
    },
    Object {
      "currentValue": "8.0.0",
      "datasource": "npm",
      "depName": "@angular/cli",
      "depType": "resolutions",
      "managerData": Object {
        "key": "**/@angular/cli",
      },
      "prettyDepType": "resolutions",
    },
    Object {
      "currentValue": "1.33.0",
      "datasource": "npm",
      "depName": "angular",
      "depType": "resolutions",
      "managerData": Object {
        "key": "**/angular",
      },
      "prettyDepType": "resolutions",
    },
    Object {
      "currentValue": "1.0.0",
      "datasource": "npm",
      "depName": "glob",
      "depType": "resolutions",
      "managerData": Object {
        "key": "config/glob",
      },
      "prettyDepType": "resolutions",
    },
  ],
  "lernaClient": undefined,
  "lernaPackages": undefined,
  "managerData": Object {
    "lernaJsonFile": undefined,
  },
  "npmLock": undefined,
  "npmrc": undefined,
  "packageFileVersion": "1.0.0",
  "packageJsonName": "renovate",
  "packageJsonType": "app",
  "pnpmShrinkwrap": undefined,
  "skipInstalls": true,
  "yarnLock": undefined,
  "yarnWorkspacesPackages": undefined,
  "yarnrc": undefined,
}
`;
